--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+bcrypt==4.2.0
 certifi==2024.7.4
 click==8.1.7
 colorama==0.4.6
@@ -18,9 +19,11 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mysql-connector-python==9.0.0
+passlib==1.7.4
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
