--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.3",
+    "marked": "^14.0.0",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.1",
     "sass": "^1.77.8",
